# flagfinder

./: CHANGELOG.md  HOW_TO_PUBLISH.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/flagfinder/: __init__.py  core.py
tests/: test_core.py
